add comment to unite_geojson

--- a/Biomassa-atlas_data/unite_geojsons.ipynb
+++ b/Biomassa-atlas_data/unite_geojsons.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "c743d3b1",
+   "execution_count": 25,
+   "id": "e7d35b49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "3365439a",
+   "execution_count": 26,
+   "id": "55279acb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,10 @@
     "        if file_name.endswith('.geojson'):  \n",
     "            file_path = os.path.join(folder_path, file_name)\n",
     "            data = gpd.read_file(file_path)\n",
+    "            \n",
+    "            # NOTE: THIS HORRIBLE IF-ELIF STRUCTURE IS ONLY TO ENSURE THE TYPE OF BIOMASS IS SAVED TO GEOJSONS, \n",
+    "            # IF RUNNING unite_geojsons with older geojsons that did not include the type information, data_procession\n",
+    "            # is now fixed to save typeinformation initially to geojsons\n",
     "            \n",
     "            # Extract the data type from the file name\n",
     "            data_type = file_name.split('.')[0]  # Assuming the file name format is \"datatype.geojson\"\n",
@@ -64,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "52ac1acc",
+   "execution_count": 27,
+   "id": "8086d418",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,13 +86,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "6f2f9360",
+   "execution_count": 28,
+   "id": "4cb848e7",
    "metadata": {},
    "outputs": [],
    "source": [
     "main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89e04f33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
