--- a/Biomassa-atlas_data/unite_geojsons.ipynb
+++ b/Biomassa-atlas_data/unite_geojsons.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e7d35b49",
+   "id": "2d0467f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "55279acb",
+   "id": "db3dd145",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8086d418",
+   "id": "96420c0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,25 +87,17 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4cb848e7",
+   "id": "2faf563b",
    "metadata": {},
    "outputs": [],
    "source": [
     "main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89e04f33",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -119,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
