--- a/Biomassa-atlas_data/unite_geojsons.ipynb
+++ b/Biomassa-atlas_data/unite_geojsons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "2d0467f3",
    "metadata": {},
    "outputs": [],
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "db3dd145",
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_geojsons():\n",
     "    \n",
-    "    folder_path = './geojsons/'\n",
+    "    folder_path = './geojsons/Nearest/'\n",
     "    \n",
     "    # Get a list of all files in the folder\n",
     "    file_list = os.listdir(folder_path)\n",
@@ -32,35 +32,7 @@
     "    for file_name in file_list:\n",
     "        if file_name.endswith('.geojson'):  \n",
     "            file_path = os.path.join(folder_path, file_name)\n",
-    "            data = gpd.read_file(file_path)\n",
-    "            \n",
-    "            # NOTE: THIS HORRIBLE IF-ELIF STRUCTURE IS ONLY TO ENSURE THE TYPE OF BIOMASS IS SAVED TO GEOJSONS, \n",
-    "            # IF RUNNING unite_geojsons with older geojsons that did not include the type information, data_procession\n",
-    "            # is now fixed to save typeinformation initially to geojsons\n",
-    "            \n",
-    "            # Extract the data type from the file name\n",
-    "            data_type = file_name.split('.')[0]  # Assuming the file name format is \"datatype.geojson\"\n",
-    "            \n",
-    "            if data_type.startswith(\"H\"):\n",
-    "                data_type = 'Hevoset ja ponit, kuivalanta yhteensä varastosta'\n",
-    "            elif data_type.startswith(\"Nautojenlie\"):\n",
-    "                data_type = 'Lihakarjan lietelanta eläinsuojasta'\n",
-    "            elif data_type.startswith(\"Nautojenkui\"):\n",
-    "                data_type = 'Lihakarjan kuivalanta yhteensä varastosta'\n",
-    "            elif data_type.startswith(\"Siipi\"):\n",
-    "                data_type = 'Broilerit, kalkkunat ja muu siipikarja kuivalanta yhteensä varastosta'            \n",
-    "            elif data_type.startswith(\"Sikojen lie\"):\n",
-    "                data_type = 'Emakot ja porsaat lietelanta eläinsuojasta'\n",
-    "            elif data_type.startswith(\"SivuvirtaOl\"):\n",
-    "                data_type = 'Sivuvirta: Olki'            \n",
-    "            elif data_type.startswith(\"Sivuvirtanurm\"):\n",
-    "                data_type = 'Sivuvirta: Kesantonurmi'\n",
-    "            elif data_type.startswith(\"Säilö\"):\n",
-    "                data_type = 'Sivuvirta: Kuivaheinänurmet'\n",
-    "            \n",
-    "            # Add the data type as a new column to the GeoDataFrame\n",
-    "            data['Type'] = data_type\n",
-    "            \n",
+    "            data = gpd.read_file(file_path)      \n",
     "            geojson_data.append(data)\n",
     "            \n",
     "    return geojson_data"
@@ -68,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "96420c0b",
    "metadata": {},
    "outputs": [],
@@ -81,12 +53,12 @@
     "    combined_data = gpd.GeoDataFrame(pd.concat(geojson_data, ignore_index=True))\n",
     "    \n",
     "    # Save the combined GeoJSON to a file\n",
-    "    combined_data.to_file('all_pickup_sites.geojson', driver='GeoJSON')"
+    "    combined_data.to_file('nearest_pickup_sites.geojson', driver='GeoJSON')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "2faf563b",
    "metadata": {},
    "outputs": [],
@@ -97,7 +69,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -111,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
