modify datasets to include ts-rates of biomasses

--- a/Biomassa-atlas_data/unite_geojsons.ipynb
+++ b/Biomassa-atlas_data/unite_geojsons.ipynb
@@ -16,6 +16,40 @@
   {
    "cell_type": "code",
    "execution_count": 55,
+   "id": "5a080680",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def deduce_TS_rate(type):\n",
+    "    if type == 'Hevoset ja ponit, kuivalanta yhteensä varastosta':\n",
+    "        return 35.0\n",
+    "    elif type == 'Nautojen lietelanta eläinsuojasta 2015':\n",
+    "        return 9.0\n",
+    "    elif type == 'Lihakarjan lietelanta eläinsuojasta':\n",
+    "        return 9.0\n",
+    "    elif type == 'Lihakarjan kuivalanta yhteensä varastosta':\n",
+    "        return 30.0\n",
+    "    elif type == 'Broilerit, kalkkunat ja muu siipikarja kuivalanta yhteensä varastosta':\n",
+    "        return 68.0\n",
+    "    elif type == 'Emakot ja porsaat lietelanta eläinsuojasta':\n",
+    "        return 8.2\n",
+    "    elif type == 'Sikojenkuivalantavarastosta2016':\n",
+    "        return 21.0\n",
+    "    elif type == 'Emakot ja porsaat kuivalanta yhteensä varastosta':\n",
+    "        return 21.0\n",
+    "    elif type == 'Sivuvirta: Kesantonurmi':\n",
+    "        return 30.0\n",
+    "    elif type == 'Sivuvirta: Olki':\n",
+    "        return 90.0\n",
+    "    elif type == 'Sivuvirta: Kuivaheinänurmet':\n",
+    "        return 40.0\n",
+    "    else:\n",
+    "        return 0.0  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "id": "db3dd145",
    "metadata": {},
    "outputs": [],
@@ -33,7 +67,8 @@
     "    for file_name in file_list:\n",
     "        if file_name.endswith('.geojson'):  \n",
     "            file_path = os.path.join(folder_path, file_name)\n",
-    "            data = gpd.read_file(file_path)      \n",
+    "            data = gpd.read_file(file_path)\n",
+    "            data['TS-rate'] = data['Type'].apply(deduce_TS_rate)\n",
     "            geojson_data.append(data)\n",
     "            \n",
     "    return geojson_data"
@@ -41,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "id": "43af574b",
    "metadata": {},
    "outputs": [],
@@ -93,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "id": "96420c0b",
    "metadata": {},
    "outputs": [],
@@ -104,7 +139,7 @@
     "    \n",
     "    # Concatenate all GeoDataFrames into a single GeoDataFrame\n",
     "    combined_data = gpd.GeoDataFrame(pd.concat(geojson_data, ignore_index=True))\n",
-    "    \n",
+    "        \n",
     "    # Save the combined GeoJSON to a file\n",
     "    combined_data.to_file('nearest_pickup_sites.geojson', driver='GeoJSON')\n",
     "    \n",
@@ -113,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "id": "2faf563b",
    "metadata": {},
    "outputs": [
