--- a/results/results_visualization.ipynb
+++ b/results/results_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 144,
    "id": "a3d05235",
    "metadata": {},
    "outputs": [],
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 145,
    "id": "80e9f222",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'noTimeCriticality/routing_output.json'\n",
-    "path2 = 'noTimeCriticality/sim_preprocessed_config.json'\n",
+    "path = 'TimeCriticality/routing_output.json'\n",
+    "path2 = 'TimeCriticality/sim_preprocessed_config.json'\n",
     "\n",
     "routing_data_json = open(path)\n",
     "routing_data_json = json.load(routing_data_json)\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 146,
    "id": "640b5b93",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 147,
    "id": "b27edc62",
    "metadata": {},
    "outputs": [
@@ -93,11 +93,11 @@
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 129, 394]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 122, 394]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[394, 113, 394]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -105,7 +105,7 @@
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
+       "      <td>[394, 150, 123, 394]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
@@ -121,7 +121,7 @@
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 103, 394]</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -165,11 +165,11 @@
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 182, 394]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 45, 394]</td>\n",
+       "      <td>[394, 38, 394]</td>\n",
        "      <td>[]</td>\n",
+       "      <td>[394, 132, 394]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>247</th>\n",
@@ -177,11 +177,11 @@
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 182, 394]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 311, 394]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>248</th>\n",
@@ -189,11 +189,11 @@
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
+       "      <td>[394, 114, 394]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 349, 394]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 178, 394]</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>249</th>\n",
@@ -210,11 +210,11 @@
        "    <tr>\n",
        "      <th>250</th>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 327, 394]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
+       "      <td>[394, 212, 394]</td>\n",
+       "      <td>[394, 349, 199, 394]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
@@ -225,36 +225,36 @@
        "</div>"
       ],
       "text/plain": [
-       "    Vehicle_1        Vehicle_2 Vehicle_3 Vehicle_4        Vehicle_5 Vehicle_6  \\\n",
-       "0          []               []        []        []  [394, 129, 394]        []   \n",
-       "1          []               []        []        []               []        []   \n",
-       "2          []               []        []        []               []        []   \n",
-       "3          []               []        []        []               []        []   \n",
-       "4          []               []        []        []               []        []   \n",
-       "..        ...              ...       ...       ...              ...       ...   \n",
-       "246        []               []        []        []  [394, 182, 394]        []   \n",
-       "247        []               []        []        []  [394, 182, 394]        []   \n",
-       "248        []               []        []        []               []        []   \n",
-       "249        []               []        []        []               []        []   \n",
-       "250        []  [394, 327, 394]        []        []               []        []   \n",
+       "    Vehicle_1 Vehicle_2 Vehicle_3 Vehicle_4             Vehicle_5  \\\n",
+       "0          []        []        []        []                    []   \n",
+       "1          []        []        []        []  [394, 150, 123, 394]   \n",
+       "2          []        []        []        []                    []   \n",
+       "3          []        []        []        []                    []   \n",
+       "4          []        []        []        []                    []   \n",
+       "..        ...       ...       ...       ...                   ...   \n",
+       "246        []        []        []        []                    []   \n",
+       "247        []        []        []        []                    []   \n",
+       "248        []        []        []        []       [394, 114, 394]   \n",
+       "249        []        []        []        []                    []   \n",
+       "250        []        []        []        []       [394, 212, 394]   \n",
        "\n",
-       "           Vehicle_7       Vehicle_8        Vehicle_9  \n",
-       "0                 []              []  [394, 122, 394]  \n",
-       "1                 []              []               []  \n",
-       "2                 []              []  [394, 103, 394]  \n",
-       "3                 []              []               []  \n",
-       "4                 []              []               []  \n",
-       "..               ...             ...              ...  \n",
-       "246               []  [394, 45, 394]               []  \n",
-       "247               []              []  [394, 311, 394]  \n",
-       "248  [394, 349, 394]              []  [394, 178, 394]  \n",
-       "249               []              []               []  \n",
-       "250               []              []               []  \n",
+       "                Vehicle_6       Vehicle_7 Vehicle_8        Vehicle_9  \n",
+       "0                      []              []        []  [394, 113, 394]  \n",
+       "1                      []              []        []               []  \n",
+       "2                      []              []        []               []  \n",
+       "3                      []              []        []               []  \n",
+       "4                      []              []        []               []  \n",
+       "..                    ...             ...       ...              ...  \n",
+       "246                    []  [394, 38, 394]        []  [394, 132, 394]  \n",
+       "247                    []              []        []               []  \n",
+       "248                    []              []        []               []  \n",
+       "249                    []              []        []               []  \n",
+       "250  [394, 349, 199, 394]              []        []               []  \n",
        "\n",
        "[251 rows x 9 columns]"
       ]
      },
-     "execution_count": 387,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 148,
    "id": "0b3e3e1c",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 149,
    "id": "e29c6456",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
        "[395 rows x 5 columns]"
       ]
      },
-     "execution_count": 389,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 150,
    "id": "c11ca173",
    "metadata": {},
    "outputs": [],
@@ -473,18 +473,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 151,
    "id": "bfc50f1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#merged_df = df.applymap(lambda route: [coord_df.loc[idx, ['latitude', 'longitude']].tolist() for idx in route])\n",
+    "merged_df = df.applymap(lambda route: [coord_df.loc[idx, ['Latitude', 'Longitude']].tolist() for idx in route])\n",
     "routes_with_dates = df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 152,
    "id": "a6485fcf",
    "metadata": {},
    "outputs": [],
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 153,
    "id": "61ec8266",
    "metadata": {},
    "outputs": [
@@ -538,11 +538,11 @@
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 129, 394]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 122, 394]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[394, 113, 394]</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -551,7 +551,7 @@
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
+       "      <td>[394, 150, 123, 394]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
@@ -568,7 +568,7 @@
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 103, 394]</td>\n",
+       "      <td>[]</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -616,11 +616,11 @@
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 182, 394]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 45, 394]</td>\n",
+       "      <td>[394, 38, 394]</td>\n",
        "      <td>[]</td>\n",
+       "      <td>[394, 132, 394]</td>\n",
        "      <td>247</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -629,11 +629,11 @@
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 182, 394]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 311, 394]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
        "      <td>248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -642,11 +642,11 @@
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
+       "      <td>[394, 114, 394]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 349, 394]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 178, 394]</td>\n",
+       "      <td>[]</td>\n",
        "      <td>249</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -665,11 +665,11 @@
        "    <tr>\n",
        "      <th>250</th>\n",
        "      <td>[]</td>\n",
-       "      <td>[394, 327, 394]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
+       "      <td>[394, 212, 394]</td>\n",
+       "      <td>[394, 349, 199, 394]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
@@ -681,36 +681,36 @@
        "</div>"
       ],
       "text/plain": [
-       "    Vehicle_1        Vehicle_2 Vehicle_3 Vehicle_4        Vehicle_5 Vehicle_6  \\\n",
-       "0          []               []        []        []  [394, 129, 394]        []   \n",
-       "1          []               []        []        []               []        []   \n",
-       "2          []               []        []        []               []        []   \n",
-       "3          []               []        []        []               []        []   \n",
-       "4          []               []        []        []               []        []   \n",
-       "..        ...              ...       ...       ...              ...       ...   \n",
-       "246        []               []        []        []  [394, 182, 394]        []   \n",
-       "247        []               []        []        []  [394, 182, 394]        []   \n",
-       "248        []               []        []        []               []        []   \n",
-       "249        []               []        []        []               []        []   \n",
-       "250        []  [394, 327, 394]        []        []               []        []   \n",
+       "    Vehicle_1 Vehicle_2 Vehicle_3 Vehicle_4             Vehicle_5  \\\n",
+       "0          []        []        []        []                    []   \n",
+       "1          []        []        []        []  [394, 150, 123, 394]   \n",
+       "2          []        []        []        []                    []   \n",
+       "3          []        []        []        []                    []   \n",
+       "4          []        []        []        []                    []   \n",
+       "..        ...       ...       ...       ...                   ...   \n",
+       "246        []        []        []        []                    []   \n",
+       "247        []        []        []        []                    []   \n",
+       "248        []        []        []        []       [394, 114, 394]   \n",
+       "249        []        []        []        []                    []   \n",
+       "250        []        []        []        []       [394, 212, 394]   \n",
        "\n",
-       "           Vehicle_7       Vehicle_8        Vehicle_9  Day  \n",
-       "0                 []              []  [394, 122, 394]    1  \n",
-       "1                 []              []               []    2  \n",
-       "2                 []              []  [394, 103, 394]    3  \n",
-       "3                 []              []               []    4  \n",
-       "4                 []              []               []    5  \n",
-       "..               ...             ...              ...  ...  \n",
-       "246               []  [394, 45, 394]               []  247  \n",
-       "247               []              []  [394, 311, 394]  248  \n",
-       "248  [394, 349, 394]              []  [394, 178, 394]  249  \n",
-       "249               []              []               []  250  \n",
-       "250               []              []               []  251  \n",
+       "                Vehicle_6       Vehicle_7 Vehicle_8        Vehicle_9  Day  \n",
+       "0                      []              []        []  [394, 113, 394]    1  \n",
+       "1                      []              []        []               []    2  \n",
+       "2                      []              []        []               []    3  \n",
+       "3                      []              []        []               []    4  \n",
+       "4                      []              []        []               []    5  \n",
+       "..                    ...             ...       ...              ...  ...  \n",
+       "246                    []  [394, 38, 394]        []  [394, 132, 394]  247  \n",
+       "247                    []              []        []               []  248  \n",
+       "248                    []              []        []               []  249  \n",
+       "249                    []              []        []               []  250  \n",
+       "250  [394, 349, 199, 394]              []        []               []  251  \n",
        "\n",
        "[251 rows x 10 columns]"
       ]
      },
-     "execution_count": 393,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 154,
    "id": "1f145314",
    "metadata": {},
    "outputs": [],
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 155,
    "id": "74d1eec5",
    "metadata": {},
    "outputs": [
@@ -739,8 +739,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No routes for days: [2, 4, 5, 6, 8, 13, 22, 32, 42, 74, 115, 120, 127, 132, 142, 147, 158, 176, 188, 202, 212, 220, 222, 228, 231, 235, 240, 244, 250]\n",
-      "Days of no driving required: 29\n"
+      "No routes for days: [3, 4, 5, 6, 7, 18, 28, 30, 34, 36, 39, 44, 46, 48, 50, 52, 55, 57, 59, 66, 68, 74, 76, 79, 86, 88, 90, 92, 95, 100, 102, 108, 111, 116, 118, 124, 126, 131, 133, 135, 138, 141, 144, 146, 148, 150, 152, 154, 156, 158, 161, 163, 167, 170, 172, 176, 178, 180, 182, 188, 198, 202, 205, 215, 217, 220, 228, 230, 232, 240, 242, 246, 248, 250]\n",
+      "Days of no driving required: 74\n"
      ]
     }
    ],
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 156,
    "id": "3943c6de",
    "metadata": {},
    "outputs": [],
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 157,
    "id": "1e12afaa",
    "metadata": {},
    "outputs": [],
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 158,
    "id": "1236b4a3",
    "metadata": {},
    "outputs": [],
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52b8660a",
+   "id": "b270ceea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -834,7 +834,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -848,7 +848,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
